--- a/chronicles/16-watson-news.adoc
+++ b/chronicles/16-watson-news.adoc
@@ -39,16 +39,16 @@ and changes will show a gradual reduction in transaction cost and it also shows 
 
 https://gateway-a.watsonplatform.net/calls/data/GetNews?apikey=1aa8d3a512615040a135b384096d50aedb6e5c43&return=enriched.url.title,enriched.url.url&start=1484611200&end=1485298800&q.enriched.url.enrichedTitle.entities.entity=|text=IBM,type=company|&q.enriched.url.enrichedTitle.docSentiment.type=positive&q.enriched.url.enrichedTitle.taxonomy.taxonomy_.label=technology%20and%20computing&count=25&outputMode=json		
 
-Here I will show how the cost changes, you will see a gradual reduction in transaction cost and also you'll notice reduced exploitation of service capabilities when parts of the query is removed:
+Here I will show how the cost changes, you will see a gradual reduction in transaction cost and also you'll notice reduced exploitation of service capabilities when parts of the query are removed:
 
 &nbsp;&nbsp;&nbsp;&nbsp;(change : transactions used)
 ```
-no changes: 814
-count=10: 784
-count=1 and remvoed q.enriched.url.enrichedTitle.taxonomy.taxonomy_.label=technology%20and%20computing: 575
-removed: q.enriched.url.enrichedTitle.docSentiment.type=positive: 384
-changed to acces.alchemyapi URL: 384
-changed to start now end now: 50
+no changes : 814
+count=10 : 784
+count=1 and remvoed q.enriched.url.enrichedTitle.taxonomy.taxonomy_.label=technology%20and%20computing : 575
+removed : q.enriched.url.enrichedTitle.docSentiment.type=positive : 384
+changed to acces.alchemyapi URL : 384
+changed to start now end now : 50
 ```
 
 7) you can see the number of transactions used for the current day by visiting here:
